# Hydrogen

./: .gitignore  CMakeLists.txt  README.md  main.cpp
doc/: development_manual.md  document.md  tutorial.md  统计总行数.py
doc/res/: Hydrogen项目目录结构.xmind
doc/uml/: Hydrogen.mdj  error.puml  grammar.puml  node.puml  object.puml  tower_of_Hanoi.mdj  tower_of_Hanoi.puml
docs/: BuiltIn.md  CFG.md  Doxyfile  development_manual.md  hdg标准库函数.md  index.html
docs/Grammar/: Grammar  KeyWord  Tokens
docs/uml/: environment.puml  new_ObjectStructure.puml  node.puml  object.puml
include/: Interpreter.h  Lexer.h  Parser.h  Shell.h
include/basic/: Environment.h  Position.h  Token.h
include/data_type/: DataType.h  Float.h  Function.h  Integer.h  None.h  Object.h  String.h
include/error/: Error.h  IllegalCharError.h  InvalidSyntaxError.h  NotImplementedError.h  RunTimeError.h  RuntimeError.h  ZeroDivisionError.h
include/kernel/: Interpreter.h  Lexer.h  Parser.h  Shell.h
include/node/: BinaryOperatorNode.h  CallNode.h  ForNode.h  FuncDefNode.h  FunctionNode.h  IfNode.cpp  IfNode.h  Node.h  NumberNode.h  ObjAccessNode.h  ObjAssignNode.h  ObjectNode.h  StatementsNode.h  UnaryOperatorNode.h  VariableAccessNode.h  VariableAssignNode.h  WhileNode.h
include/object/: Float.h  Function.h  Integer.h  List.h  None.h  Object.h  String.h
lib/: Interpreter.cpp  Interpreter.h  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  Position.cpp  Position.h  Shell.cpp  Shell.h  Token.cpp  Token.h
lib/data_type/: DataType.cpp  Float.cpp  Float.h  Integer.cpp  Integer.h
lib/error/: Error.cpp  Error.h  IllegalCharError.cpp  IllegalCharError.h  InvalidSyntaxError.cpp  InvalidSyntaxError.h  RunTimeError.cpp  RunTimeError.h
lib/node/: BinaryOperatorNode.cpp  BinaryOperatorNode.h  IntNode.cpp  IntNode.h  Node.cpp  Node.h  NumberNode.cpp  NumberNode.h  UnaryOperatorNode.cpp  (+1 more)
res/: info.rc
src/: Interpreter.cpp  Lexer.cpp  Parser.cpp  Shell.cpp  main.cpp
test/: factorial.hdg  game.hdg  guess_number.hdg  main.hdg  tower_of_Hanoi
tests/: guess_number.hdg  tower_of_Hanoi.hdg
(+908 files in other folders)
